<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="Filters"
        android:id="@+id/filters"
        android:icon="@drawable/ic_baseline_filter_list_24"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/room_filter"
                android:title="Choose a room"
                app:showAsAction="never">

                <menu>

                    <item
                        android:id="@+id/peach"
                        android:title="Peach"
                        app:showAsAction="never">

                    </item>

                    <item
                        android:id="@+id/mario"
                        android:title="Mario"
                        app:showAsAction="never">

                    </item>

                    <item
                        android:id="@+id/luigi"
                        android:title="Luigi"
                        app:showAsAction="never">

                    </item>

                    <item
                        android:id="@+id/toad"
                        android:title="Toad"
                        app:showAsAction="never">

                    </item>

                    <item
                        android:id="@+id/yoshi"
                        android:title="Yoshi"
                        app:showAsAction="never">

                    </item>

                    <item
                        android:id="@+id/donkey"
                        android:title="Donkey"
                        app:showAsAction="never">

                    </item>

                    <item
                        android:id="@+id/koopa"
                        android:title="Koopa"
                        app:showAsAction="never">

                    </item>

                    <item
                        android:id="@+id/boo"
                        android:title="Boo"
                        app:showAsAction="never">

                    </item>

                    <item
                        android:id="@+id/goomba"
                        android:title="Goomba"
                        app:showAsAction="never">

                    </item>

                    <item
                        android:id="@+id/kamek"
                        android:title="Kamek"
                        app:showAsAction="never">

                    </item>

                    <item
                        android:id="@+id/allMeeting"
                        android:title="ALL ROOM"
                        app:showAsAction="never">

                    </item>

                </menu>

            </item>

            <item
                android:id="@+id/date_filter"
                android:title="Choose a date"
                app:showAsAction="never">

            </item>

            <item
                android:id="@+id/reset_filter"
                android:title="RESET FILTERS"
                app:showAsAction="never">

            </item>



        </menu>

    </item>

</menu>