...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_room_avatar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
